# simple-todo-list

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cli-version/: main_cli.cpp
gui-version/: mainwindow.cpp  mainwindow.h  mainwindow.ui
